1. Add ace.root.dir system property